# Run-wrapper

./: .gitignore  Cargo.toml  README.md  build_on_nix.sh  cross_PKGBUILD
.cargo/: config.toml
.github/workflows/: build_on_nix.yaml  ci.yml
pkgbuild/: PKGBUILD
src/: main.rs
