cargo-features = ["panic-immediate-abort"]

[package]
name = "Run"
version = "0.0.7"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/Run-wrapper"
description = "ELF wrapper for RunImage Run.sh script in the extracted form"
edition = "2021"

[profile.release]
lto = true
debug  = false
opt-level = "z"
strip = "symbols"
codegen-units = 1
panic = "immediate-abort"

[profile.dev]
opt-level = 0

[dependencies]
which = "8.0.0"